# indory-perception-server

./: .env.example  .gitignore  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  preflight.sh  pyproject.toml  run.sh  setup.sh
benchmark/: README.ko.md  check_dataset.py  dataset.py  export_paddleocr_rec.py  gt.py  review.py  review_server.py  run.py  test.sh
docs/: api.md  setup.md
requirements/: runtime.txt
src/indory_ocr/: __init__.py  app.py  preflight.py  schemas.py  semantic_ocr.py  semantic_vlm.py  settings.py  utils.py
src/indory_ocr/providers/: __init__.py  base.py  gz_compat.py  not_configured.py
src/waybill_ocr_llm/: __init__.py  benchmark.py  candidates.py  cli.py  figures.py  llm.py  ocr.py  pipeline.py  schema.py  ws_server.py
tests/: test_benchmark_runner.py  test_waybill_candidates.py
